Bug 684536 - More Sync Changes: (port bugs 620593, 626099, 630885, 636353 and 642969). r=InvisibleSmiley

--- a/suite/themes/classic/communicator/sync/syncSetup.css
+++ b/suite/themes/classic/communicator/sync/syncSetup.css
@@ -106,6 +106,10 @@ description > .text-link:focus {
   text-align: center;
 }
 
+#passphraseHelpSpacer {
+  width: 0.5em;
+}
+
 #add-device-throbber,
 #login-throbber {
   list-style-image: url("chrome://global/skin/icons/loading_16.png");
